2004-06-30  Kenichi Handa  <handa@m17n.org>

	* xfaces.c (Fface_font): If frame is not on a window system,
	ignore CHARACTER arg.  If HAVE_WINDOW_SYSTEM is not defined, don't
	refer to face->font.
	(split_font_name_into_vector, build_font_name_from_vector)
	(lookup_non_ascii_face, realize_non_ascii_face): Define them only
	whne HAVE_WINDOW_SYSTEM is defined.

2004-05-29  Kenichi Handa  <handa@m17n.org>

	* xdisp.c (BUILD_GLYPH_STRINGS): Check if s is NULL.
	(x_produce_glyphs): Fix setting of members of cmp in case
	cmp->glyph_len is zero,

	* fontset.c (Fset_fontset_font): Docstring fixed.
	(Ffontset_info): Make it backward compatible.  New arg ALL.

2004-05-11  Kim F. Storm  <storm@cua.dk>

	* process.c (read_process_output): Grow decoding_buf when needed;
	this could cause a crash in allocate_string and compact_small_strings.

2004-04-29  Kenichi Handa  <handa@m17n.org>

	* fileio.c (WRITE_BUF_SIZE): This macro deleted.
	(e_write): Fix previous change.

2004-04-28  Kenichi Handa  <handa@m17n.org>

	* coding.c (setup_coding_system): Set coding->common_flags
	correctly for raw-text.
	(consume_chars): On encoding unibyte text by raw-text, don't check
	multibyte form.
	(encode_coding): On encoding by raw-text, never use translation
	tables.

	* fileio.c (e_write): Short cut for the case of no encoding.

2004-04-20  Kenichi Handa  <handa@m17n.org>

	* coding.c (detect_coding): Delete unused variables.
	(detect_coding_system): Likewise.

2004-04-18  Kenichi Handa  <handa@m17n.org>

	* coding.c (encode_coding_utf_8): Fix handling of raw-byte char.
	(consume_chars): Fix handling of 8-bit bytes in unibyte source.

2004-04-14  Kenichi Handa  <handa@m17n.org>

	Sync all files to HEAD.

2004-04-14  Kenichi Handa  <handa@m17n.org>

	* coding.c (Ffind_coding_systems_region_internal): Include
	raw-text and no-conversion in the result.

	* fontset.h: Sync to HEAD.

	* fontset.c: Sync to HEAD.

2004-04-14  Kenichi Handa  <handa@m17n.org>
